force-app/main/default/objects/CFFMembers__c/CFFMembers__c.object-meta.xml
<CustomObject>
    <label>CFFMembers</label>
    <nameField>
        <label>CFFMembers Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CFFMembers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>