force-app/main/default/objects/CFFMembers__c/fields/CFF_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CFF_Start_Date__c</fullName>
    <label>CFF Start Date</label>
    <type>Date</type>
</CustomField>