force-app/main/default/objects/CFFMembers__c/fields/LinkedIn_Link__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Link__c</fullName>
    <label>LinkedIn Link</label>
    <type>Url</type>
</CustomField>