force-app/main/default/objects/CFFMembers__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>