force-app/main/default/objects/CFFMembers__c/fields/Trailhed_Link__c.field-meta.xml
<CustomField>
    <fullName>Trailhed_Link__c</fullName>
    <label>Trailhed Link</label>
    <type>Url</type>
</CustomField>