force-app/main/default/objects/CFFMembers__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>P.S. Service Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>