force-app/main/default/objects/CFFMembers__c/recordTypes/Interns.recordType-meta.xml
<RecordType>
    <fullName>Interns</fullName>
    <active>true</active>
    <description>Record Type to be assigned to Intern Account user</description>
    <label>Interns</label>
</RecordType>