force-app/main/default/objects/CFFMembers__c/recordTypes/Sercice_Provider.recordType-meta.xml
<RecordType>
    <fullName>Sercice_Provider</fullName>
    <active>true</active>
    <label>Sercice Provider</label>
</RecordType>