force-app/main/default/objects/CFFMembers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>LinkedIn_Link__c</columns>
    <columns>Type__c</columns>
    <columns>Phone__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Country__c</columns>
    <columns>CFF_Start_Date__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>