force-app/main/default/objects/CFFMembers__c/listViews/Board_Members.listView-meta.xml
<ListView>
    <fullName>Board_Members</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Certification__c</columns>
    <columns>Phone__c</columns>
    <columns>Type__c</columns>
    <columns>Active__c</columns>
    <columns>LinkedIn_Link__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Board Member</value>
    </filters>
    <label>Board Members</label>
</ListView>