force-app/main/default/objects/CFFMembers__c/listViews/P_S_Service_Provider.listView-meta.xml
<ListView>
    <fullName>P_S_Service_Provider</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>P.S. Service Provider</value>
    </filters>
    <label>P.S. Service Provider</label>
</ListView>