force-app/main/default/objects/CFFMembers__c/listViews/Volunteers.listView-meta.xml
<ListView>
    <fullName>Volunteers</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Volunteer</value>
    </filters>
    <label>Volunteers</label>
</ListView>